p2/confs/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: default
  labels:
    app: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  namespace: default
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two 
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  namespace: default
  labels:
    app: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
