p2/confs/services.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-one 
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-one
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-two 
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-two
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-three
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-three
---
